--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "/"
+baseURL = "/posts"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "NickBarrett.me"
 theme = "hello-friend-ng"
 
 [params]
@@ -42,9 +42,9 @@ theme = "hello-friend-ng"
         name = "About"
         url = "/about"
       [[languages.en.menu.main]]
-        identifier = "showcase"
-        name = "Showcase"
-        url = "/showcase"
+        identifier = "posts"
+        name = "Posts"
+        url = "/posts"
 
 # And you can even create generic menu
 [menu]
