--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ theme = "hello-friend-ng"
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
-      logoText = "hello friend ng"
+      logoText = "$ cd /home/"
       logoHomeLink = "/"
     # or
     #
@@ -39,11 +39,11 @@ theme = "hello-friend-ng"
     [languages.en.menu]
       [[languages.en.menu.main]]
         identifier = "about"
-        name = "About"
+        name = "/about/"
         url = "/about"
       [[languages.en.menu.main]]
         identifier = "posts"
-        name = "Posts"
+        name = "/posts/"
         url = "/posts"
 
 # And you can even create generic menu
